Bug 34383 - Selecting multiple cells by mouse does not update headers on the fly
Summary: Selecting multiple cells by mouse does not update headers on the fly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium minor
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-17 04:33 UTC by Adam Kłobukowski
Modified: 2011-02-18 10:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Kłobukowski 2011-02-17 04:33:22 UTC
Selecting multiple cells by pressing mouse button and moving mouse on spreadsheet area, does not update colum/row headers on the fly. The got update after user pulls mouse button.

This is counter-intuitive. Also, selecting cells using keyboard updates headers on the fly.
Comment 1 Rainer Bielefeld Retired 2011-02-17 05:14:28 UTC
[Reproducible] with "LibreOffice 3.3.1 RC1 – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 7 / tag 3.3.1.1)]"

That behavior differs from the one in OOo 3.1.1 and 3.4-dev

@Kohey:
one for you?
Comment 2 Kohei Yoshida 2011-02-17 06:22:51 UTC
Ha ha!  Nice catch. :-)

I'll take a look at this today.  Probably an easy fix...
Comment 3 Kohei Yoshida 2011-02-17 12:35:10 UTC
Fixed on master.

http://cgit.freedesktop.org/libreoffice/calc/commit/?id=f3df9f8674d559d38b638396cd48c9eb8f0ecca6

It took me a little longer than expected, but as I initially suspected, it was just a matter of calling SelectionChanged() at the right time.  The hard part was figuring out what the right time was.
Comment 4 Kohei Yoshida 2011-02-18 10:56:35 UTC
The fix will also go into 3.3.2 (not 3.3.1 mind you).