Properly update column and row header selections. (fdo#34383)

When making range selection by mouse, Calc wouldn't highlight the
new range in the column and row headers.  It was because we weren't
calling ScTabView::SelectionChanged() when the selection range
is updated.  This SelectionChanged() call then puts in queue a
re-paint request for column and row headers.